<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:layout_height="match_parent"
    android:background="#1818EE"
    tools:context=".ThirdScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <ImageView
            android:id="@+id/imgView"
            android:src="@drawable/contactpageicon"
            android:layout_centerInParent="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:text="Contact Info"
            android:layout_below="@id/imgView"
            android:letterSpacing="0.1"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"></TextView>
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:rowCount="5"
        android:columnCount="1"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                app:cardElevation="4dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_height="0dp"
            >
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/school"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/school"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="10dp">
                </TextView>
            </RelativeLayout>
            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/major"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/major"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="10dp">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/schoolcard"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/schoolid"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="10dp">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp"
                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/phoneicon"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/phone"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="10dp">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/emailicon"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/schoolemail"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="9dp">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

</LinearLayout>